--- a/src/views/users/modifPass.ejs
+++ b/src/views/users/modifPass.ejs
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%-include('./partials/head.ejs')%>
-<body>
-    <section  class="contenedorApp">
-    <%-include('./partials/header.ejs')%>
+<%-include('./partials/head.ejs')%>
 
-    <main class="contenedorMain">
+    <body>
+        <section class="contenedorApp">
+            <%-include('./partials/header.ejs')%>
+
+                <main class="contenedorMain">
 
 
-        <% if(typeof Usererrors != "undefined") {%> 
-        <ul class="listadoErrores">
-            <% Usererrors.forEach(error => { %> 
-                <li>· <%= error.msg %> </li>
-            <% }); %> 
-        </ul>
-        <% } %> 
-        
+                    <% if(typeof Usererrors != "undefined") {%>
+                        <ul class="listadoErrores">
+                            <% Usererrors.forEach(error => { %>
+                                <li>·
+                                    <%= error.msg %>
+                                </li>
+                                <% }); %>
+                        </ul>
+                        <% } %>
 
-            <form action="/users/cambiopass?_method=PUT" method="POST" class="reg__form">
-                <label for="regPass">contraseña</label>
-                <input class="reg--input" type= "password" name="password" placeholder="contraseña" id="regPass" autofocus required>
-                <label for="regrePass">repetir contraseña</label>
-                <input class="reg--input" type="password" name="repassword" placeholder="contraseña" id="regrePass" autofocus required>
 
-                
-                <input class="reg--submit" type="submit" value=<%=typeof usuarioActivo.nombre != "undefined" ? "guardar" :  "Registrarme" %> autofocus>
-                
-               
-            </form>    
+                            <form action="/users/cambiopass?_method=PUT" method="POST" class="reg__form">
+                                <label for="regPass">contraseña</label>
+                                <input class="reg--input" type="password" name="password" placeholder="contraseña" id="regPass" autofocus required>
+                                <label for="regrePass">repetir contraseña</label>
+                                <input class="reg--input" type="password" name="repassword" placeholder="contraseña" id="regrePass" autofocus required>
 
-           
-    </main>
-    
-    <%-include('./partials/footer.ejs')%>
 
-</section>
-</body>
+                                <input class="reg--submit" type="submit" value=<%=typeof usuarioActivo.nombre !="undefined" ? "guardar" : "Registrarme" %> autofocus>
+
+
+                            </form>
+
+
+                </main>
+
+                <%-include('./partials/footer.ejs')%>
+
+        </section>
+    </body>
+
 </html>
