--- a/src/views/faq.ejs
+++ b/src/views/faq.ejs
@@ -1,53 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%-include('./partials/head.ejs')%>
-<body>
-<section class="contenedorApp">
+<%-include('./partials/head.ejs')%>
 
-    <%-include('./partials/header.ejs')%>
+    <body>
+        <section class="contenedorApp">
 
-    <main class="contenedorMainFAQ">
-     <article class="cont__faq">
-        <h2 class="titlG">preguntas frecuentes</h2>
-        <section>    
-            <p class="preguntasFAQ">
-            ¿Cómo comprar?
-            </p>
-            <p class="parrafoFAQ">
-            Paso 1:
-            Elegís lo que querés.
-            Es muy fácil.
-            Para cargar los productos en tu carrito hacé click en el botón
-            que dice “Agregar” que aparece debajo de cada uno. Para
-            eliminar productos de tu carrito, podes hacerlo clickeando en
-            “borrar” que figura al lado del detalle de compra. Para
-            cambiar las cantidades del producto elegido, hacelo
-            directamente desde el carrito de compras, clickeando en “+” o
-            “-” según lo que desees. Una vez que hayas seleccionado
-            todos los que desees, clickeá en “Finalizar compra” para
-            avanzar en tu pedido.
-            </p>
-            <p class="preguntasFAQ">
-            ¿Tengo que registrarme para realizar una compra?</p>
-            <p class="parrafoFAQ">
-            Sí, para realizar una compra es necesario que estés
-            registrado. Podés hacerlo una vez que ya hayas llenado tu
-            carrito!
-            </p>
-        </section>
-     </article> 
-     
-        <section class="cont__btn--volver">
-        <button class="btn--volver">
+            <%-include('./partials/header.ejs')%>
+
+                <main class="contenedorMainFAQ">
+                    <article class="cont__faq">
+                        <h2 class="titlG">preguntas frecuentes</h2>
+                        <section>
+                            <p class="preguntasFAQ">
+                                ¿Cómo comprar?
+                            </p>
+                            <p class="parrafoFAQ">
+                                Paso 1: Elegís lo que querés. Es muy fácil. Para cargar los productos en tu carrito hacé click en el botón que dice “Agregar” que aparece debajo de cada uno. Para eliminar productos de tu carrito, podes hacerlo clickeando en “borrar” que figura al lado
+                                del detalle de compra. Para cambiar las cantidades del producto elegido, hacelo directamente desde el carrito de compras, clickeando en “+” o “-” según lo que desees. Una vez que hayas seleccionado todos los que desees,
+                                clickeá en “Finalizar compra” para avanzar en tu pedido.
+                            </p>
+                            <p class="preguntasFAQ">
+                                ¿Tengo que registrarme para realizar una compra?</p>
+                            <p class="parrafoFAQ">
+                                Sí, para realizar una compra es necesario que estés registrado. Podés hacerlo una vez que ya hayas llenado tu carrito!
+                            </p>
+                        </section>
+                    </article>
+
+                    <section class="cont__btn--volver">
+                        <button class="btn--volver">
             <a class="volverInicio" href="/">Volver al inicio</a>
         </button>
+                    </section>
+                </main>
+
+                <%-include('./partials/footer.ejs')%>
+
+
         </section>
-    </main>
 
-    <%-include('./partials/footer.ejs')%>
-    
+    </body>
 
-</section>
- 
-</body>
 </html>
