--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,85 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <%-include('./partials/head.ejs')%>
-<body>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-    <script src="/js/cantidad.js" defer></script>
-    <script src="/js/haberAgregado.js" defer></script>
-    <section  class="contenedorApp">
 
-    <%-include('./partials/header.ejs')%>
+    <body>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+        <script src="/js/cantidad.js" defer></script>
+        <script src="/js/haberAgregado.js" defer></script>
+        <section class="contenedorApp">
 
-    <main class="contenedorMain">
-        <article class="cont__portada" id="eliminar">
-            <section class="cont__img__titl">
-                <img class="portada--titl" src="/img/dBirra-titl.svg" alt="digital birra">
+            <%-include('./partials/header.ejs')%>
 
-            </section>
-            <form class="formFiltroHome" action="/" method="POST">
-            <section class="cont__select__venTodas"> 
-            <select onchange="this.form.submit()" class="select--tcerveza" name="estilo_id">
+                <main class="contenedorMain">
+                    <article class="cont__portada" id="eliminar">
+                        <section class="cont__img__titl">
+                            <img class="portada--titl" src="/img/dBirra-titl.svg" alt="digital birra">
+
+                        </section>
+                        <form class="formFiltroHome" action="/" method="POST">
+                            <section class="cont__select__venTodas">
+                                <select onchange="this.form.submit()" class="select--tcerveza" name="estilo_id">
           
                 <option class="select--option" value="" disabled selected>TIPO DE CERVEZA</option>
               <%estilos.forEach(element => { %>
                 <option class="select--option" value="<%= element.id %>"><%= element.nombre %></option>
               <% }); %>
             </select>
-           
-            <input type="submit" name="eleccion" value="mas-vendidas" class="btn--vent"></input>
-            <input type="submit" name="eleccion" value="todas" class="btn--vent" ></input>
-            </form>   
-            </section>
-        </article>
-        
-        <h2 class="section--titl"><%= eleccion %></h2>
 
-    <section class="bloque__productos">
-        
-        <% if (typeof cervezas != 'undefined'){ %> 
-            <% cervezas.forEach(element =>{ %> 
-            <article class="cont__producto">
-                <a href="/products/<%= element.id %>">
+                                <input type="submit" name="eleccion" value="mas-vendidas" class="btn--vent"></input>
+                                <input type="submit" name="eleccion" value="todas" class="btn--vent"></input>
+                        </form>
+                        </section>
+                    </article>
+
+                    <h2 class="section--titl">
+                        <%= eleccion %>
+                    </h2>
+
+                    <section class="bloque__productos">
+
+                        <% if (typeof cervezas != 'undefined'){ %>
+                            <% cervezas.forEach(element =>{ %>
+                                <article class="cont__producto">
+                                    <a href="/products/<%= element.id %>">
                 <img class="producto--img" src="/img/products/<%= element.imagen %>" alt="birraA">
                 </a>
-                <article class="producto__info">
-                    <a href="/products/<%= element.id %>"><%= element.nombre + ' ' + element.alcohol +"%" %></a>
-                    <section class="info--precioMl">
-                    <p><%= element.tamano %>ML</p>
-                    <p>$<%= element.precio %></p>
+                                    <article class="producto__info">
+                                        <a href="/products/<%= element.id %>">
+                                            <%= element.nombre + ' ' + element.alcohol +"%" %>
+                                        </a>
+                                        <section class="info--precioMl">
+                                            <p>
+                                                <%= element.tamano %>ML</p>
+                                            <p>$
+                                                <%= element.precio %>
+                                            </p>
+                                        </section>
+                                    </article>
+
+                                    <% if (typeof admin == 'undefined'){ %>
+                                        <form class="cont__btn__agregar--pp" action="/products/agregarcarrito" method="POST">
+                                            <section class="cont__cantidad--pp">
+                                                <a class="menos btn--cant">-</a>
+                                                <input class="btn--cant" type="number" min="1" value=1 name="cantidad">
+                                                <a class="agregar btn--cant">+</a>
+                                            </section>
+                                            <input style="display: none;" type="number" value=<%=element.id%> name="beer_id">
+
+                                            <input type="submit" value="Agregar" class=<%=usuarioActivo ? "sarasa" : "btn--agregar"%>>
+
+                                        </form>
+                                        <%} else { %>
+
+                                            <section>
+
+                                                <a class="btn--agregar" href="/products/modificarForm/<%=element.id%> ">Modificar</a>
+                                            </section>
+
+
+                                            <% } %>
+
+                                </article>
+
+                                <%})} %>
+
                     </section>
-                </article>
-                
-                <% if (typeof admin == 'undefined'){ %> 
-                    <form class="cont__btn__agregar--pp" action="/products/agregarcarrito" method="POST">
-                        <section class="cont__cantidad--pp">
-                            <a class="menos btn--cant">-</a> 
-                            <input class="btn--cant" type="number" min="1" value=1 name="cantidad">
-                            <a class="agregar btn--cant">+</a>
-                        </section>
-                        <input style="display: none;" type="number" value=<%=element.id%> name="beer_id">
-                       
-                        <input type="submit" value="Agregar" class=<%=usuarioActivo ? "sarasa" : "btn--agregar"%>>
-                         
-                    </form>
-                         <%} else { %> 
 
-                         <section>
+                </main>
 
-                             <a  class="btn--agregar" href="/products/modificarForm/<%=element.id%> ">Modificar</a>
-                       </section>
-            
+                <%-include('./partials/footer.ejs')%>
+        </section>
+    </body>
 
-                        <% } %> 
-                
-            </article>
-            
-         <%})} %> 
-
-    </section>
-
-    </main>
-
-    <%-include('./partials/footer.ejs')%>
-</section>
-</body>
 </html>
