--- a/src/views/products/creacionExitosa.ejs
+++ b/src/views/products/creacionExitosa.ejs
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%-include('./partials/head.ejs')%>
-<body>
-<section class="contenedorApp">
-    <%-include('./partials/header.ejs')%>
+<%-include('./partials/head.ejs')%>
 
-    <main class="contenedorMain">
-      <p>Creaste la cerveza llamada "<%= newBeer.nombre %>" !</p> 
+    <body>
+        <section class="contenedorApp">
+            <%-include('./partials/header.ejs')%>
 
-    </main>
-    
-    <%-include('./partials/footer.ejs')%>
-</section>
+                <main class="contenedorMain">
+                    <p>Creaste la cerveza llamada "
+                        <%= newBeer.nombre %>" !</p>
 
-</body>
+                </main>
+
+                <%-include('./partials/footer.ejs')%>
+        </section>
+
+    </body>
+
 </html>
