--- a/src/views/products/producto.ejs
+++ b/src/views/products/producto.ejs
@@ -1,73 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%-include('./partials/head.ejs')%>
-<body>
-     <script src="/js/cantidad.js" defer></script>
-<!-- <script src="/js/carrito.js" defer></script> -->
-<section class="contenedorApp">
-    <%-include('./partials/header.ejs')%>
+<%-include('./partials/head.ejs')%>
 
-    <main class="contenedorMainProducto">
+    <body>
+        <script src="/js/cantidad.js" defer></script>
+        <!-- <script src="/js/carrito.js" defer></script> -->
+        <section class="contenedorApp">
+            <%-include('./partials/header.ejs')%>
 
-    <section class="bloque__producto">
-            <article class="cont__img__producto--pp">
-                <img class="producto--img" src="/img/products/<%= birra.imagen %>" alt="birraA">
-            </article>
-                
-            <article class="cont__titl__btn__agregar--pp">
-                <article class="producto__titl--pp">
-                    <section class="color_estilo-<%= birra.estilo.nombre %>"></section>
-                    <p class="nombre--ppp"><%= birra.nombre %>
-                    </p>
-                    
-                    <article class="detalle_birra">
-                    <p class="nombre--pp"><%= birra.estilo.nombre %></p>
-                    <p class="nombre--pp"><%= birra.ibu + " ibu"%>
-                    </p>
-                    </article>
-                    <article class="detalle_birra">
-                    <p class="nombre--pp"><%= "Alc "+ birra.alcohol + '%'%>
-                    </p>
-                    <p class="nombre--pp"><%= birra.tamano +' ml' %>
-                    </p>
-                    </article>
-                    <p class="precio--pp"><%= '$' + birra.precio %>
-                    </p>
-                    
-                </article>
-                
-                <% if (!admin){ %> 
-                <form class="cont__btn__agregar--pp"  action="/products/agregarcarrito" method="POST">
-                    <section class="cont__cantidad--pp">
-                        <a class="menos btn--cant">-</a>
-                        <input class="btn--cant" type="number" min="1" value=1 name="cantidad">
-                        <a class="agregar btn--cant">+</a>
+                <main class="contenedorMainProducto">
+
+                    <section class="bloque__producto">
+                        <article class="cont__img__producto--pp">
+                            <img class="producto--img" src="/img/products/<%= birra.imagen %>" alt="birraA">
+                        </article>
+
+                        <article class="cont__titl__btn__agregar--pp">
+                            <article class="producto__titl--pp">
+                                <section class="color_estilo-<%= birra.estilo.nombre %>"></section>
+                                <p class="nombre--ppp">
+                                    <%= birra.nombre %>
+                                </p>
+
+                                <article class="detalle_birra">
+                                    <p class="nombre--pp">
+                                        <%= birra.estilo.nombre %>
+                                    </p>
+                                    <p class="nombre--pp">
+                                        <%= birra.ibu + " ibu"%>
+                                    </p>
+                                </article>
+                                <article class="detalle_birra">
+                                    <p class="nombre--pp">
+                                        <%= "Alc "+ birra.alcohol + '%'%>
+                                    </p>
+                                    <p class="nombre--pp">
+                                        <%= birra.tamano +' ml' %>
+                                    </p>
+                                </article>
+                                <p class="precio--pp">
+                                    <%= '$' + birra.precio %>
+                                </p>
+
+                            </article>
+
+                            <% if (!admin){ %>
+                                <form class="cont__btn__agregar--pp" action="/products/agregarcarrito" method="POST">
+                                    <section class="cont__cantidad--pp">
+                                        <a class="menos btn--cant">-</a>
+                                        <input class="btn--cant" type="number" min="1" value=1 name="cantidad">
+                                        <a class="agregar btn--cant">+</a>
+                                    </section>
+                                    <input style="display: none;" type="number" value=1 name="cantidad">
+                                    <input style="display: none;" type="number" value=<%=b irra.id %> name="beer_id">
+                                    <input type="submit" value="Agregar" class="btn--agregar">
+
+                                </form>
+                                <%} else { %>
+                                    <section>
+                                        <a class="btn--agregar" href="/products/modificarForm/<%= birra.id %>">Modificar</a>
+                                    </section>
+                                    <% } %>
+
+
+                                        <p class="descripcion--pp">
+                                            <%= birra.descripcion%>
+                                        </p>
+
                     </section>
-                    <input style="display: none;" type="number" value=1 name="cantidad">
-                    <input style="display: none;" type="number" value=<%= birra.id %> name="beer_id">
-                    <input type="submit" value="Agregar" class="btn--agregar">
-                     
-                </form>
-                     <%} else { %> 
-                     <section>
-                         <a class="btn--agregar" href="/products/modificarForm/<%= birra.id %>">Modificar</a>
-                   </section>
-                    <% } %> 
+                    </article>
+        </section>
+
+        </main>
+        <%-include('./partials/footer.ejs')%>
 
 
-                <p class="descripcion--pp">
-                    <%= birra.descripcion%>
-                </p>
-                   
-                </section>   
-            </article> 
-    </section>
+            </section>
 
-    </main>
-    <%-include('./partials/footer.ejs')%>
-    
+    </body>
 
-</section>
-
-</body>
 </html>
