--- a/src/views/users/logeoExitoso.ejs
+++ b/src/views/users/logeoExitoso.ejs
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%-include('./partials/head.ejs')%>
-<body>
-<section class="contenedorApp">
-    <%-include('./partials/header.ejs')%>
+<%-include('./partials/head.ejs')%>
 
-    <main class="contenedorMain">
-      
-        
-        <p class="contenedorMain__links">¡Bienvenido <%= usuarioActivo.nombre %>!</p> 
-        <br>
-        <% if(usuarioAdmin){%>
-            <a class="btn--volver" href="/products/createForm">Crear nuevo producto</a>
-        <%}%>
-        <a href="/" class="btn--volver">Volver al inicio</a>
+    <body>
+        <section class="contenedorApp">
+            <%-include('./partials/header.ejs')%>
 
-        
-            
+                <main class="contenedorMain">
 
-    </main>
-    
-    <%-include('./partials/footer.ejs')%>
-</section>
 
-</body>
+                    <p class="contenedorMain__links">¡Bienvenido
+                        <%= usuarioActivo.nombre %>!</p>
+                    <br>
+                    <% if(usuarioAdmin){%>
+                        <a class="btn--volver" href="/products/createForm">Crear nuevo producto</a>
+                        <%}%>
+                            <a href="/" class="btn--volver">Volver al inicio</a>
+
+
+
+
+                </main>
+
+                <%-include('./partials/footer.ejs')%>
+        </section>
+
+    </body>
+
 </html>
