--- a/src/views/users/registro.ejs
+++ b/src/views/users/registro.ejs
@@ -1,72 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%-include('./partials/head.ejs')%>
-    
-<body>
-    <script src="/js/registrofront.js" defer></script>
-    <section  class="contenedorApp">
-    <%-include('./partials/header.ejs')%>
+<%-include('./partials/head.ejs')%>
 
-    <main class="contenedorMain">
-      
-        <section class= "registro">
-            <p class="registrate"><%= typeof usuarioActivo.nombre != "undefined" ? usuarioActivo.nombre +" "+usuarioActivo.apellido :"Registrate"%></p>
-            <a class="link_log" href="/users/login"><%=typeof usuarioActivo.nombre != "undefined" ? "" :"¿ya sos cliente?"%></a>
+    <body>
+        <script src="/js/registrofront.js" defer></script>
+        <section class="contenedorApp">
+            <%-include('./partials/header.ejs')%>
+
+                <main class="contenedorMain">
+
+                    <section class="registro">
+                        <p class="registrate">
+                            <%= typeof usuarioActivo.nombre != "undefined" ? usuarioActivo.nombre +" "+usuarioActivo.apellido :"Registrate"%>
+                        </p>
+                        <a class="link_log" href="/users/login">
+                            <%=typeof usuarioActivo.nombre != "undefined" ? "" :"¿ya sos cliente?"%>
+                        </a>
+                    </section>
+
+                    <% if(typeof registerErrors != "undefined") {%>
+                        <ul class="listadoErrores">
+                            <% registerErrors.forEach(error => { %>
+                                <li>·
+                                    <%= error.msg %>
+                                </li>
+                                <% }); %>
+                        </ul>
+                        <% } %>
+
+                            <form action="/users/registrar" method="POST" class="reg__form" enctype="multipart/form-data">
+                                <div>
+                                    <label for="regNombre">Nombre</label>
+                                    <input class="reg--input" type="text" name="nombre" placeholder="NOMBRE" id="regNombre" value="<%= typeof usuarioActivo.nombre != " undefined " ? usuarioActivo.nombre :(typeof oldValues != "undefined " ? oldValues.regNombre : " ") %>" autofocus required>
+                                    <small></small>
+                                </div>
+                                <div>
+                                    <label for="regApellido">Apellido</label>
+                                    <input class="reg--input" type="text" name="apellido" placeholder="APELLIDO" id="regApellido" value="<%= typeof usuarioActivo.nombre != " undefined " ? usuarioActivo.apellido : (typeof oldValues != "undefined " ? oldValues.regApellido : " ") %>" autofocus
+                                        required>
+                                    <small></small>
+                                </div>
+                                <div>
+                                    <label for="regMail">Mail</label>
+                                    <input class="reg--input" type="email" name="email" placeholder="doncerveza@dbirra.com.ar" id="logMail" value="<%= typeof usuarioActivo.nombre != " undefined " ? usuarioActivo.email :(typeof oldValues != "undefined " ? oldValues.regMail : " ") %>" autofocus
+                                        required>
+                                    <small></small>
+                                </div>
+                                <div>
+                                    <label for="regPassword">Contraseña</label>
+                                    <input class="reg--input" type="password" name="password" placeholder="*******" id="regPassword" autofocus required>
+                                    <small></small>
+                                </div>
+                                <div>
+                                    <label for="regConfPassword">Repetir Contraseña</label>
+                                    <input class="reg--input" type="password" name="regConfPassword" placeholder="*******" id="regConfPassword" autofocus required>
+                                    <small></small>
+                                </div>
+                                <div>
+                                    <label for="imagen">Avatar</label>
+                                    <input type="file" name="imagen" id="imagen" required>
+                                    <small></small>
+                                </div>
+                                <input class="reg--submit" type="submit" value=<%=typeof usuarioActivo.nombre !="undefined" ? "guardar" : "Registrarme" %> autofocus>
+
+
+                            </form>
+
+
+                </main>
+
+
+
+                <%-include('./partials/footer.ejs')%>
+
         </section>
+        <script src="/js/registrofront.js"></script>
+        <script src="/js/cantidad.js" defer></script>
+    </body>
 
-        <% if(typeof registerErrors != "undefined") {%> 
-        <ul class="listadoErrores">
-            <% registerErrors.forEach(error => { %> 
-                <li>· <%= error.msg %> </li>
-            <% }); %> 
-        </ul>
-        <% } %> 
-
-            <form action="/users/registrar" method="POST" class="reg__form" enctype="multipart/form-data">
-                <div>
-                    <label for="regNombre">Nombre</label>
-                    <input class="reg--input" type= "text" name="nombre" placeholder="NOMBRE" id="regNombre" value="<%= typeof usuarioActivo.nombre != "undefined" ? usuarioActivo.nombre :(typeof oldValues != "undefined" ? oldValues.regNombre : "") %>" autofocus required>
-                    <small></small>
-                </div>
-                <div>
-                    <label for="regApellido">Apellido</label>
-                    <input class="reg--input" type="text" name="apellido" placeholder="APELLIDO" id="regApellido" value="<%= typeof usuarioActivo.nombre != "undefined" ? usuarioActivo.apellido : (typeof oldValues != "undefined" ? oldValues.regApellido : "") %>" autofocus required>
-                    <small></small>
-                </div>
-                <div>
-                    <label for="regMail">Mail</label>
-                    <input class="reg--input" type="email" name="email" placeholder="doncerveza@dbirra.com.ar" id="logMail" value="<%= typeof usuarioActivo.nombre != "undefined" ? usuarioActivo.email :(typeof oldValues != "undefined" ? oldValues.regMail : "") %>" autofocus required>
-                    <small></small>
-                </div>
-                <div>
-                    <label for="regPassword">Contraseña</label>
-                    <input class="reg--input" type="password" name="password" placeholder="*******" id="regPassword"  autofocus required>
-                    <small></small>
-                </div>
-                <div>
-                    <label for="regConfPassword">Repetir Contraseña</label>
-                    <input class="reg--input" type="password" name="regConfPassword" placeholder="*******" id="regConfPassword"  autofocus required>
-                    <small></small>
-                </div>
-                <div>
-                    <label for="imagen">Avatar</label>
-                    <input type="file" name="imagen" id="imagen" required>
-                    <small></small>
-                </div>
-                <input class="reg--submit" type="submit" value=<%=typeof usuarioActivo.nombre != "undefined" ? "guardar" :  "Registrarme" %> autofocus>
-                
-               
-            </form>    
-
-           
-    </main>
-    
-   
-    
-    <%-include('./partials/footer.ejs')%>
-
-</section>
- <script src="/js/registrofront.js"></script>
- <script src="/js/cantidad.js" defer></script>
-</body>
 </html>
