--- a/src/views/products/modificar_producto.ejs
+++ b/src/views/products/modificar_producto.ejs
@@ -67,7 +67,7 @@
             <label for="laimagen">Imagen</label>
             <input class="reg--input subirImg" type="file" name="imagen" id="laimagen" accept="image/*">
             <!-- Submit -->
-            <input id="modificar" class="reg--submit" type="submit" value="GUARDAR" autofocus>            
+            <input id="modificar" class="reg--submit" type="submit" value="ACTUALIZAR" autofocus>            
         </form>
         <form id='elFormDelete' class="elFormDelete" action="/products/form/<%=modifbirra.id%>/borrar?_method=DELETE" method="POST">
             <input id="eliminar"  class="reg--submit--eliminar" type="submit" value="ELIMINAR" autofocus>
