agregue foto juani a sobre nosotros

--- a/src/views/sobre_nosotros.ejs
+++ b/src/views/sobre_nosotros.ejs
@@ -19,10 +19,10 @@
                                 <label for="">Moreko</label>
                             </article>
                             <article class="contFoto">
-                                <a href="" target="_blank">
-                                    <img class="intfoto" src="img/avatars/imagen-1610422216948.jpg" alt="Pat">
+                                <a href="https://github.com/juanism31" target="_blank">
+                                    <img class="intfoto" src="img/avatars/juani-chica.jpg" alt="Juani">
                                 </a>
-                                <label for="">Patricio</label>
+                                <label for="">Juani</label>
                             </article>
                             <article class="contFoto">
                                 <a href="https://github.com/rodtob" target="_blank">
