pagina de fin de compra

--- a/src/views/users/compraExitosa.ejs
+++ b/src/views/users/compraExitosa.ejs
@@ -9,9 +9,9 @@
                 <main class="contenedorMain">
 
 
-                    <p class="contenedorMain__links">¡Felicitaciones
-                        <%= usuarioActivo.nombre %>!</p>´
-                        <p>compraste</p>
+                    <p class="contenedorMain__links">¡Muchas gracias
+                        <%= usuarioActivo.nombre %> por comprar en DIGITAL BIRRA!</p>´
+                        <p>Vuelva pronto!</p>
                 
                     
                     <a href="/" class="btn--volver">Volver al inicio</a>
