--- a/src/views/users/compraExitosa.ejs
+++ b/src/views/users/compraExitosa.ejs
@@ -10,8 +10,9 @@
 
 
                     <p class="contenedorMain__links">¡Muchas gracias
-                        <%= usuarioActivo.nombre %> por comprar en DIGITAL BIRRA!</p>´
-                        <p>Vuelva pronto!</p>
+                       <p class="nombre"><%= usuarioActivo.nombre %></p>  
+                       por comprar en DIGITAL BIRRA!</p>
+                
                 
                     
                     <a href="/" class="btn--volver">Volver al inicio</a>
