detalle sumar producto

--- a/src/views/products/sumar_producto.ejs
+++ b/src/views/products/sumar_producto.ejs
@@ -60,7 +60,7 @@
             <label for="laimagen">Imagen</label>
             <input class="reg--input" type="file" name="imagen" id="laimagen" required>
             <!-- Submit -->
-            <input class="reg--submit" type="submit" value="GUARDAR" autofocus>            
+            <input class="reg--submit" type="submit" value="CREAR" autofocus>            
         
         </form>
 
