--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -20,6 +20,9 @@
                                 <% }); %>
                         </ul>
                         <% } %>
+                        <a class="link_reg" href="/users/registro">
+                            Registrate!
+                        </a>
 
                             <form action="/users/loguear" method="POST" class="cont__form">
                                 <div>
