--- a/src/views/users/registro.ejs
+++ b/src/views/users/registro.ejs
@@ -42,7 +42,7 @@
                                     <label for="regConfPassword">Repetir Contraseña</label>
                                     <input class="reg--input" type="password" name="regConfPassword" placeholder="*******" id="regConfPassword" autofocus required>                               
                                     <label for="imagen">Avatar</label>
-                                    <input type="file" name="imagen" id="imagen" required>
+                                    <input class= 'reg--input' type="file" name="imagen" id="imagen" required>
                                 <input class="reg--submit" type="submit" value=<%=typeof usuarioActivo.nombre !="undefined" ? "guardar" : "Registrarme" %> autofocus>
 
 
